# markdown-pipeline

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
doc2md/: __init__.py  cli.py  config.py  converter.py  pipeline.py
pdf2md/: converter.py  pipeline.py
tests/: test_converter.py  test_pipeline.py
